--- a/weather/gallery.html
+++ b/weather/gallery.html
@@ -18,74 +18,53 @@
         <div id="prestonbanner"><p>Preston Pancakes in the Park! 9:00 a.m. Saturday at the city park pavilion</p></div>
         <header>
             <picture>
-                <img src="images/sunrise.png" alt="logo">
-            </picture>
-            <section class="headings">
-                <h1>Upper The Weather</h1>
-                <div class="motto">Up, out, and about</div>
-            </section>
-        </header>
-        <nav class="navbar">
-            <ul class="navigation">
-                <li><a href="#" onclick="toggleMenu()">Menu</a></li>
-                <li><a href="preston.html">Home</a></li>
-                <li><a href="preston.html">Preston Idaho</a></li>
-                <li><a href="#">Soda Springs</a></li>
-                <li><a href="#">Fish Haven</a></li>
-                <li><a href="#">Storm Center</a></li>
-                <li class="active"><a href="#">Gallery</a></li>
-            </ul>
-        </nav>
-        <main>
-            <h2 class="cityname">Weather Gallery</h2>
-            <div id="weathergallery">
                 <div id="picture-one">
                     <img            
                     src="images/placeholder-image.webp"
-                    data-src="images/1.jpeg"
+                    data-src="https://images.unsplash.com/photo-1492011221367-f47e3ccd77a0?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=687&q=80"
                     alt="lighting" width="300" height="400">
                     <p>Lighting and thunderstorm in Greenville</p>
                 </div>
                 <div id="picture-two">
                     <img            
                     src="images/placeholder-image.webp"
-                    data-src="images/2.jpeg"
+                    data-src="images/1.jpeg"
                     alt="rain" width="300" height="400">
                     <p>Shower rain over Springfield</p>
                 </div>
                 <div id="picture-three">
                     <img            
                     src="images/placeholder-image.webp"
-                    data-src="images/3.webp"
+                    data-src="https://images.unsplash.com/photo-1504608524841-42fe6f032b4b?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=765&q=80"
                     alt="very cloudy" width="300" height="400">
                     <p>Very cloudy sky in Franklin</p>
                 </div>
                 <div id="picture-four">
                     <img            
                     src="images/placeholder-image.webp"
-                    data-src="images/4.jpeg"
+                    data-src="https://images.unsplash.com/photo-1558486012-817176f84c6d?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=670&q=80"
                     alt="partly cloudy" width="300" height="400">
                     <p>Partly cloudy over north Clark County</p>
                 </div>
                 <div id="picture-five">
                     <img            
                     src="images/placeholder-image.webp"
-                    data-src="images/5.jpeg"
+                    data-src="https://images.unsplash.com/photo-1516912481808-3406841bd33c?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=744&q=80"
                     alt="thunders" width="300" height="400">
                     <p>Thunders in Greenville</p>
                 </div>
                 <div id="picture-six">
                     <img            
                     src="images/placeholder-image.webp"
-                    data-src="images/6.jpeg"
+                    data-src="https://images.unsplash.com/photo-1615196534250-a670810aa78e?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=687&q=80"
                     alt="sunny" width="300" height="400">
                     <p>Sunny sky in Preston</p>
                 </div>
                 <div id="picture-seven">
                     <img            
                     src="images/placeholder-image.webp"
-                    data-src="images/7.jpeg"
-                    alt="lighting strikes" width="300" height="400">
+                    data-src="https://images.unsplash.com/photo-1534274988757-a28bf1a57c17?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=735&q=80"
+                    alt="lighting" width="300" height="400">
                     <p>Lighting strikes over Springfield</p>
                 </div>
                 <div id="picture-eight">
