--- a/weather/gallery.html
+++ b/weather/gallery.html
@@ -63,7 +63,7 @@
                 <div id="picture-seven">
                     <img            
                     src="images/placeholder-image.webp"
-                    data-src="https://images.unsplash.com/photo-1534274988757-a28bf1a57c17?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=735&q=80"
+                    data-src="images/7.jpeg"
                     alt="lighting" width="300" height="400">
                     <p>Lighting strikes over Springfield</p>
                 </div>
