--- a/weather/gallery.html
+++ b/weather/gallery.html
@@ -18,6 +18,26 @@
         <div id="prestonbanner"><p>Preston Pancakes in the Park! 9:00 a.m. Saturday at the city park pavilion</p></div>
         <header>
             <picture>
+                <img src="images/sunrise.png" alt="logo">
+            </picture>
+            <section class="headings">
+                <h1>Upper The Weather</h1>
+                <div class="motto">Up, out, and about</div>
+            </section>
+        </header>
+        <nav class="navbar">
+            <ul class="navigation">
+                <li><a href="#" onclick="toggleMenu()">Menu</a></li>
+                <li><a href="preston.html">Home</a></li>
+                <li class="active"><a href="#">Preston Idaho</a></li>
+                <li><a href="#">Soda Springs</a></li>
+                <li><a href="#">Fish Haven</a></li>
+                <li><a href="#">Storm Center</a></li>
+                <li><a href="gallery.html">Gallery</a></li>
+            </ul>
+        </nav>
+        <main>
+            <h2 class="cityname">Weather Gallery</h2>
                 <div id="picture-one">
                     <img            
                     src="images/placeholder-image.webp"
