fixed div weathergallery

--- a/weather/gallery.html
+++ b/weather/gallery.html
@@ -38,6 +38,7 @@
         </nav>
         <main>
             <h2 class="cityname">Weather Gallery</h2>
+            <div id="weathergallery">
                 <div id="picture-one">
                     <img            
                     src="images/placeholder-image.webp"
