--- a/weather/gallery.html
+++ b/weather/gallery.html
@@ -29,11 +29,11 @@
             <ul class="navigation">
                 <li><a href="#" onclick="toggleMenu()">Menu</a></li>
                 <li><a href="preston.html">Home</a></li>
-                <li class="active"><a href="#">Preston Idaho</a></li>
+                <li><a href="preston.html">Preston Idaho</a></li>
                 <li><a href="#">Soda Springs</a></li>
                 <li><a href="#">Fish Haven</a></li>
                 <li><a href="#">Storm Center</a></li>
-                <li><a href="gallery.html">Gallery</a></li>
+                <li class="active"><a href="gallery.html">Gallery</a></li>
             </ul>
         </nav>
         <main>
