--- a/weather/gallery.html
+++ b/weather/gallery.html
@@ -37,7 +37,7 @@
             </ul>
         </nav>
         <main>
-            <h2 class="cityname">Weather Gallery</h2>
+            <h2>Weather Gallery</h2>
             <div id="weathergallery">
                 <div id="picture-one">
                     <img            
