--- a/weather/stormcenter.html
+++ b/weather/stormcenter.html
@@ -44,7 +44,7 @@
                     <label class="top">Full Name* <input type="text" name="name" pattern=".{5,}" required></label>
                     <label class="top">Email <input type="email" name="email" placeholder="someone@gmail.com"></label>
                     <label class="top">Phone* <input type="tel" name="phone" required></label>
-                    <label class="top">Zip Code* <input type="number" name="phone" pattern=".{5,5}" required></label>
+                    <label class="top">Zip Code* <input type="number" name="zipcode" pattern=".{5,5}" required></label>
                 </fieldset>
 
                 <fieldset>
