--- a/weather/stormcenter.html
+++ b/weather/stormcenter.html
@@ -44,7 +44,7 @@
                     <label class="top">Full Name* <input type="text" name="name" pattern="^.* .*$" required></label>
                     <label class="top">Email <input type="email" name="email" placeholder="someone@gmail.com"></label>
                     <label class="top">Phone* <input type="tel" name="phone" required></label>
-                    <label class="top">Zip Code* <input type="number" name="zipcode" pattern="[2-9]{1}" maxlength="1" required></label>
+                    <label class="top">Zip Code* <input type="text" id="zip" name="zip" required pattern="[0-9]*"></label>
                 </fieldset>
 
                 <fieldset>
