added and fixed some js

--- a/Lesson-9/prophets.html
+++ b/Lesson-9/prophets.html
@@ -10,7 +10,7 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Akshar:wght@300&family=Bebas+Neue&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="prophets.css" />
-        <script defer src="js/script.js"></script>
+        <script defer src="prophets.js"></script>
     </head>
     <body>
         <header>  <h1>Latter-day Prophets</h1>
