added prophets css

--- a/Lesson-9/prophets.html
+++ b/Lesson-9/prophets.html
@@ -5,10 +5,10 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <meta name="description" content="Prophets page by Diana Urbina Guerra"/>
         <meta name="author" content="Diana Urbina Guerra" />
-        <title>Prophets</title>
+        <title>Latter-day Prophets</title>
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Akshar:wght@300&family=Bebas+Neue&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Lato:wght@100&family=Ubuntu:wght@300&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="prophets.css" />
         <script defer src="prophets.js"></script>
     </head>
@@ -19,6 +19,6 @@
           <div class="cards"></div>
         </main>
         <footer>
-          Your name here | BYU-Idaho | WDD 230
+          Diana Urbina Guerra | BYU-Idaho | WDD 230
         </footer>
     </body>
