--- a/Lesson1/index.html
+++ b/Lesson1/index.html
@@ -21,11 +21,11 @@
         <ul>
           <li><a href="index.html">Lesson 01: Course Assignment Portal</a></li>
           <li><a href="design-principles.html">Lesson 01: Design Principles Document</a></li>
-          <li><a href="https://Dianauguerra.github.io/Lesson2/index.html">Lesson 02: Website Planning Document</a></li>
-          <li><a href="https://Dianauguerra.github.io/weather/preston.html">Lesson 03: Preston Town Page Start</a></li>
-          <li><a href="#">Lesson 04: Preston Town Page</a></li>
+          <li><a href="/Lesson2/index.html">Lesson 02: Website Planning Document</a></li>
+          <li><a href="http://Dianauguerra.github.io/weather/preston.html">Lesson 03: Preston Town Page Start</a></li>
+          <li><a href="http://Dianauguerra.github.io/weather/preston.html">Lesson 04: Preston Town Page</a></li>
           <li><a href="#">Lesson 05: Responsive Images</a></li>
-          <li><a href="#">Lesson 06: The Gallery Page</a></li>
+          <li><a href="http://Dianauguerra.github.io/weather/gallery-7.html">Lesson 06: The Gallery Page</a></li>
           <li><a href="#">Lesson 06: The Storm Center</a></li>
           <li><a href="#">Lesson 07: The Weather Site Homepage</a></li>
           <li><a href="#">Lesson 07: Preston Weather API</a></li>
