fixed alt and width properties

--- a/Lesson-10/preston.html
+++ b/Lesson-10/preston.html
@@ -29,12 +29,12 @@
         <nav class="navbar">
             <ul class="navigation">
                 <li><a href="#" onclick="toggleMenu()">Menu</a></li>
-                <li><a href="Lesson-5/index.html">Home</a></li>
+                <li><a href="../weather/Lesson-5/index.html">Home</a></li>
                 <li class="active"><a href="#">Preston Idaho</a></li>
                 <li><a href="#">Soda Springs</a></li>
                 <li><a href="#">Fish Haven</a></li>
-                <li><a href="stormcenter.html">Storm Center</a></li>
-                <li><a href="gallery-7.html">Gallery</a></li>
+                <li><a href="../weather/stormcenter.html">Storm Center</a></li>
+                <li><a href="../weather/gallery-7.html">Gallery</a></li>
             </ul>
         </nav>
         <main>
@@ -58,27 +58,27 @@
             <div class="forecast">
                     <div class="day1">
                         <h3>Wed</h3> 
-                        <img id="icon1">
+                        <img id="icon1" alt="icon1" width="50">
                         <p><span id="1"></span> °F</p>
                     </div>  
                     <div class="day2">
                         <h3>Wed</h3> 
-                        <img id="icon2">
+                        <img id="icon2" alt="icon2" width="50">
                         <p><span id="2"></span> °F</p>
                     </div>  
                     <div class="day3">
                         <h3>Wed</h3> 
-                        <img id="icon3">
+                        <img id="icon3" alt="icon3" width="50">
                         <p><span id="3"></span> °F</p>
                     </div>  
                     <div class="day4">
                         <h3>Wed</h3> 
-                        <img id="icon4">
+                        <img id="icon4" alt="icon4" width="50">
                         <p><span id="4"></span> °F</p>
                     </div>      
                     <div class="day5">
                         <h3>Wed</h3> 
-                        <img id="icon5">
+                        <img id="icon5" alt="icon5" width="50">
                         <p><span id="5"></span> °F</p>
                     </div>                  
             </div>
