--- a/weather/stormcenter.html
+++ b/weather/stormcenter.html
@@ -28,8 +28,8 @@
         <nav class="navbar">
             <ul class="navigation">
                 <li><a href="#" onclick="toggleMenu()">Menu</a></li>
-                <li><a href="preston.html">Home</a></li>
-                <li><a href="preston.html">Preston Idaho</a></li>
+                <li><a href="../weather/Lesson-5/index.html">Home</a></li>
+                <li><a href="../Lesson-10/preston.html">Preston Idaho</a></li>
                 <li><a href="#">Soda Springs</a></li>
                 <li><a href="#">Fish Haven</a></li>
                 <li class="active"><a href="stormcenter.html">Storm Center</a></li>
