--- a/weather/Lesson-5/index.html
+++ b/weather/Lesson-5/index.html
@@ -31,7 +31,7 @@
             <ul class="navigation">
                 <li><a href="#" onclick="toggleMenu()">Menu</a></li>
                 <li class="active"><a href="index.html">Home</a></li>
-                <li><a href="../preston.html">Preston Idaho</a></li>
+                <li><a href="/Users/dianaurbinaguerra/Documents/BYUI/WDD230 github/Dianauguerra.github.io/Lesson-10/preston.html">Preston Idaho</a></li>
                 <li><a href="#">Soda Springs</a></li>
                 <li><a href="#">Fish Haven</a></li>
                 <li><a href="../stormcenter.html">Storm Center</a></li>
