added links to wireframes

--- a/weather/Lesson-5/index.html
+++ b/weather/Lesson-5/index.html
@@ -49,6 +49,10 @@
             </p>
             <p>Last Modified:</p>
             <p id="lastMod"></p>
+            <a href="https://wireframe.cc/pro/pp/7e149bacf549291">Large Viewport Wireframe  |  </a>
+            <a href="https://wireframe.cc/pro/pp/3f45528b6549295">Medium Viewport Wireframe  |  </a>
+            <a href="https://wireframe.cc/pro/pp/975c5ccb9549298">Small Viewport Wireframe</a>
+            
         </footer>
     </body>
 
