corrected file paths

--- a/Lesson-11/weather/thanks.html
+++ b/Lesson-11/weather/thanks.html
@@ -28,12 +28,12 @@
         <nav class="navbar">
             <ul class="navigation">
                 <li><a href="#" onclick="toggleMenu()">Menu</a></li>
-                <li><a href="preston.html">Home</a></li>
-                <li><a href="preston.html">Preston Idaho</a></li>
+                <li><a href="../weather/homepage/index.html">Home</a></li>
+                <li><a href="../Lesson-10/preston.html">Preston Idaho</a></li>
                 <li><a href="#">Soda Springs</a></li>
                 <li><a href="#">Fish Haven</a></li>
                 <li class="active"><a href="stormcenter.html">Storm Center</a></li>
-                <li><a href="gallery-7.html">Gallery</a></li>
+                <li><a href="gallery.html">Gallery</a></li>
             </ul>
         </nav>
         <main>
