added forecast days

--- a/Lesson-11/weather/gallery.html
+++ b/Lesson-11/weather/gallery.html
@@ -9,10 +9,10 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Akshar:wght@300&family=Bebas+Neue&display=swap" rel="stylesheet">
-        <link rel="stylesheet" href="css/small.css" />
-        <link rel="stylesheet" href="css/medium.css" />
-        <link rel="stylesheet" href="css/large.css" />
-        <script defer src="js/script.js"></script>
+        <link rel="stylesheet" href="../weather/css/small.css" />
+        <link rel="stylesheet" href="../weather/css/medium.css" />
+        <link rel="stylesheet" href="../weather/css/large.css" />
+        <script defer src="../weather/js/script.js"></script>
     </head>
     <body>
         <div id="prestonbanner"><p>Preston Pancakes in the Park! 9:00 a.m. Saturday at the city park pavilion</p></div>
@@ -28,12 +28,12 @@
         <nav class="navbar">
             <ul class="navigation">
                 <li><a href="#" onclick="toggleMenu()">Menu</a></li>
-                <li><a href="../Lesson-11/weather/Lesson-5/index.html">Home</a></li>
-                <li><a href="../Lesson-10/preston.html">Preston Idaho</a></li>
+                <li><a href="../weather/homepage/index.html">Home</a></li>
+                <li><a href="../weather/preston.html">Preston Idaho</a></li>
                 <li><a href="#">Soda Springs</a></li>
                 <li><a href="#">Fish Haven</a></li>
-                <li><a href="stormcenter.html">Storm Center</a></li>
-                <li class="active"><a href="gallery.html">Gallery</a></li>
+                <li><a href="../weather/stormcenter.html">Storm Center</a></li>
+                <li class="active"><a href="../weather/gallery.html">Gallery</a></li>
             </ul>
         </nav>
         <main>
@@ -42,63 +42,63 @@
                 <div id="picture-one">
                     <img            
                     src="images/placeholder-image.webp"
-                    data-src="images/1.jpeg"         
+                    data-src="../weather/images/1.jpeg"         
                     alt="lighting" width="300" height="400">
                     <p>Lighting and thunderstorm in Greenville</p>
                 </div>
                 <div id="picture-two">
                     <img            
                     src="images/placeholder-image.webp"
-                    data-src="images/2.jpeg"
+                    data-src="../weather/images/2.jpeg"
                     alt="rain" width="300" height="400">
                     <p>Shower rain over Springfield</p>
                 </div>
                 <div id="picture-three">
                     <img            
                     src="images/placeholder-image.webp"
-                    data-src="images/3.jpeg"
+                    data-src="../weather/images/3.jpeg"
                     alt="very cloudy" width="300" height="400">
                     <p>Very cloudy sky in Franklin</p>
                 </div>
                 <div id="picture-four">
                     <img            
                     src="images/placeholder-image.webp"
-                    data-src="images/4.jpeg"
+                    data-src="../weather/images/4.jpeg"
                     alt="partly cloudy" width="300" height="400">
                     <p>Partly cloudy over north Clark County</p>
                 </div>
                 <div id="picture-five">
                     <img            
                     src="images/placeholder-image.webp"
-                    data-src="images/5.jpeg"
+                    data-src="../weather/images/5.jpeg"
                     alt="thunders" width="300" height="400">
                     <p>Thunders in Greenville</p>
                 </div>
                 <div id="picture-six">
                     <img            
                     src="images/placeholder-image.webp"
-                    data-src="images/6.jpeg"
+                    data-src="../weather/images/6.jpeg"
                     alt="sunny" width="300" height="400">
                     <p>Sunny sky in Preston</p>
                 </div>
                 <div id="picture-seven">
                     <img            
                     src="images/placeholder-image.webp"
-                    data-src="images/7.jpeg"
+                    data-src="../weather/images/7.jpeg"
                     alt="lighting" width="300" height="400">
                     <p>Lighting strikes over Springfield</p>
                 </div>
                 <div id="picture-eight">
                     <img            
                     src="images/placeholder-image.webp"
-                    data-src="images/8.jpeg"
+                    data-src="../weather/images/8.jpeg"
                     alt="tornado" width="300" height="400">
                     <p>Tornador forming over north Clark County</p>
                 </div>
                 <div id="picture-nine">
                     <img            
                     src="images/placeholder-image.webp"
-                    data-src="images/9.jpeg"
+                    data-src="../weather/images/9.jpeg"
                     alt="snow" width="300" height="400">
                     <p>Fresh snow over Preston Streets</p>
                 </div>
