--- a/Lesson-11/weather/homepage/index.html
+++ b/Lesson-11/weather/homepage/index.html
@@ -12,7 +12,7 @@
         <link rel="stylesheet" href="../css/small.css" />
         <link rel="stylesheet" href="../css/medium.css" />
         <link rel="stylesheet" href="../css/large.css" />
-        <script defer src="../js/script.js"></script>
+        <script defer src="../weather/js/script.js"></script>
         <script defer src="homepage.js"></script>
 
     </head>
@@ -31,11 +31,11 @@
             <ul class="navigation">
                 <li><a href="#" onclick="toggleMenu()">Menu</a></li>
                 <li class="active"><a href="index.html">Home</a></li>
-                <li><a href="/Users/dianaurbinaguerra/Documents/BYUI/WDD230 github/Dianauguerra.github.io/Lesson-10/preston.html">Preston Idaho</a></li>
+                <li><a href="../preston.html">Preston Idaho</a></li>
                 <li><a href="#">Soda Springs</a></li>
                 <li><a href="#">Fish Haven</a></li>
                 <li><a href="../stormcenter.html">Storm Center</a></li>
-                <li ><a href="../gallery-7.html">Gallery</a></li>
+                <li ><a href="../gallery.html">Gallery</a></li>
             </ul>
         </nav>
         <main>
