--- a/Lesson-11/weather/thanks.html
+++ b/Lesson-11/weather/thanks.html
@@ -9,10 +9,10 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Akshar:wght@300&family=Bebas+Neue&display=swap" rel="stylesheet">
-        <link rel="stylesheet" href="css/small.css" />
-        <link rel="stylesheet" href="css/medium.css" />
-        <link rel="stylesheet" href="css/large.css" />
-        <script defer src="js/script.js"></script>
+        <link rel="stylesheet" href="../weather/css/small.css" />
+        <link rel="stylesheet" href="../weather/css/medium.css" />
+        <link rel="stylesheet" href="../weather/css/large.css" />
+        <script defer src="../weather/js/script.js"></script>
     </head>
     <body>
         <div id="prestonbanner"><p>Preston Pancakes in the Park! 9:00 a.m. Saturday at the city park pavilion</p></div>
@@ -29,7 +29,7 @@
             <ul class="navigation">
                 <li><a href="#" onclick="toggleMenu()">Menu</a></li>
                 <li><a href="../weather/homepage/index.html">Home</a></li>
-                <li><a href="../Lesson-10/preston.html">Preston Idaho</a></li>
+                <li><a href="../weather/preston.html">Preston Idaho</a></li>
                 <li><a href="#">Soda Springs</a></li>
                 <li><a href="#">Fish Haven</a></li>
                 <li class="active"><a href="stormcenter.html">Storm Center</a></li>
