preston idaho to preston

--- a/Lesson-06/weather/sodasprings.html
+++ b/Lesson-06/weather/sodasprings.html
@@ -3,9 +3,9 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <meta name="description" content="Preston page by Diana Urbina Guerra"/>
+        <meta name="description" content="Soda Springs page by Diana Urbina Guerra"/>
         <meta name="author" content="Diana Urbina Guerra" />
-        <title>Upper The Weather - Preston, Idaho</title>
+        <title>Upper The Weather - Soda Springs, Idaho</title>
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Akshar:wght@300&family=Bebas+Neue&display=swap" rel="stylesheet">
@@ -121,4 +121,3 @@
             <p id="lastMod"></p>
         </footer>
     </body>
-
