--- a/Lesson-06/weather/gallery.html
+++ b/Lesson-06/weather/gallery.html
@@ -29,7 +29,7 @@
             <ul class="navigation">
                 <li><a href="#" onclick="toggleMenu()">Menu</a></li>
                 <li><a href="../weather/homepage/index.html">Home</a></li>
-                <li><a href="../weather/preston.html">Preston Idaho</a></li>
+                <li><a href="../weather/preston.html">Preston</a></li>
                 <li><a href="#">Soda Springs</a></li>
                 <li><a href="#">Fish Haven</a></li>
                 <li><a href="../weather/stormcenter.html">Storm Center</a></li>
