--- a/Lesson-11/weather/preston.html
+++ b/Lesson-11/weather/preston.html
@@ -31,7 +31,7 @@
             <ul class="navigation">
                 <li><a href="#" onclick="toggleMenu()">Menu</a></li>
                 <li><a href="../weather/homepage/index.html">Home</a></li>
-                <li class="active"><a href="preston.html">Preston Idaho</a></li>
+                <li class="active"><a href="preston.html">Preston</a></li>
                 <li><a href="#">Soda Springs</a></li>
                 <li><a href="#">Fish Haven</a></li>
                 <li><a href="../weather/stormcenter.html">Storm Center</a></li>
