--- a/weather/gallery-7.html
+++ b/weather/gallery-7.html
@@ -29,7 +29,7 @@
             <ul class="navigation">
                 <li><a href="#" onclick="toggleMenu()">Menu</a></li>
                 <li><a href="../weather/Lesson-5/index.html">Home</a></li>
-                <li><a href="../Lesson-10/preston.html">Preston Idaho</a></li>
+                <li><a href="../Lesson-10/preston.html">Preston</a></li>
                 <li><a href="#">Soda Springs</a></li>
                 <li><a href="#">Fish Haven</a></li>
                 <li><a href="stormcenter.html">Storm Center</a></li>
