--- a/weather/preston.html
+++ b/weather/preston.html
@@ -30,7 +30,7 @@
             <ul class="navigation">
                 <li><a href="#" onclick="toggleMenu()">Menu</a></li>
                 <li><a href="Lesson-5/index.html">Home</a></li>
-                <li class="active"><a href="#">Preston Idaho</a></li>
+                <li class="active"><a href="#">Preston</a></li>
                 <li><a href="#">Soda Springs</a></li>
                 <li><a href="#">Fish Haven</a></li>
                 <li><a href="stormcenter.html">Storm Center</a></li>
