--- a/Lesson-06/weather/fishhaven.html
+++ b/Lesson-06/weather/fishhaven.html
@@ -31,9 +31,9 @@
             <ul class="navigation">
                 <li><a href="#" onclick="toggleMenu()">Menu</a></li>
                 <li><a href="../weather/homepage/index.html">Home</a></li>
-                <li class="active"><a href="preston.html">Preston</a></li>
-                <li><a href="#">Soda Springs</a></li>
-                <li><a href="#">Fish Haven</a></li>
+                <li><a href="../weather/preston.html">Preston</a></li>
+                <li><a href="../weather/sodasprings.html">Soda Springs</a></li>
+                <li class="active"><a href="fishhaven.html">Fish Haven</a></li>
                 <li><a href="../weather/stormcenter.html">Storm Center</a></li>
                 <li><a href="../weather/gallery.html">Gallery</a></li>
             </ul>
