--- a/Lesson-06/weather/preston.html
+++ b/Lesson-06/weather/preston.html
@@ -32,8 +32,8 @@
                 <li><a href="#" onclick="toggleMenu()">Menu</a></li>
                 <li><a href="../weather/homepage/index.html">Home</a></li>
                 <li class="active"><a href="preston.html">Preston</a></li>
-                <li><a href="#">Soda Springs</a></li>
-                <li><a href="#">Fish Haven</a></li>
+                <li><a href="../weather/sodasprings.html">Soda Springs</a></li>
+                <li><a href="../weather/fishhaven.html">Fish Haven</a></li>
                 <li><a href="../weather/stormcenter.html">Storm Center</a></li>
                 <li><a href="../weather/gallery.html">Gallery</a></li>
             </ul>
