--- a/Lesson-06/weather/thanks.html
+++ b/Lesson-06/weather/thanks.html
@@ -30,10 +30,10 @@
                 <li><a href="#" onclick="toggleMenu()">Menu</a></li>
                 <li><a href="../weather/homepage/index.html">Home</a></li>
                 <li><a href="../weather/preston.html">Preston</a></li>
-                <li><a href="#">Soda Springs</a></li>
-                <li><a href="#">Fish Haven</a></li>
+                <li><a href="../weather/sodasprings.html">Soda Springs</a></li>
+                <li><a href="../weather/fishhaven.html">Fish Haven</a></li>
                 <li class="active"><a href="stormcenter.html">Storm Center</a></li>
-                <li><a href="gallery.html">Gallery</a></li>
+                <li><a href="../weather/gallery.html">Gallery</a></li>
             </ul>
         </nav>
         <main>
