fixed javascript for forecast

--- a/Lesson-06/weather/sodasprings.html
+++ b/Lesson-06/weather/sodasprings.html
@@ -31,15 +31,15 @@
             <ul class="navigation">
                 <li><a href="#" onclick="toggleMenu()">Menu</a></li>
                 <li><a href="../weather/homepage/index.html">Home</a></li>
-                <li class="active"><a href="preston.html">Preston</a></li>
-                <li><a href="../weather/sodasprings.html">Soda Springs</a></li>
+                <li><a href="preston.html">Preston</a></li>
+                <li class="active"><a href="../weather/sodasprings.html">Soda Springs</a></li>
                 <li><a href="../weather/fishhaven.html">Fish Haven</a></li>
                 <li><a href="../weather/stormcenter.html">Storm Center</a></li>
                 <li><a href="../weather/gallery.html">Gallery</a></li>
             </ul>
         </nav>
         <main>
-            <h2 class="cityname">Preston, Idaho</h2>
+            <h2 class="cityname">Soda Springs, Idaho</h2>
             <div class="weather-summary-div">
                 <picture >
                     <source srcset="../weather/images/hero600.jpeg" media="(min-width: 401px) and (max-width: 899px)">
