--- a/Lesson-06/weather/fishhaven.html
+++ b/Lesson-06/weather/fishhaven.html
@@ -39,7 +39,7 @@
             </ul>
         </nav>
         <main>
-            <h2 class="cityname">Preston, Idaho</h2>
+            <h2 class="cityname">Fish Haven, Idaho</h2>
             <div class="weather-summary-div">
                 <picture >
                     <source srcset="../weather/images/hero600.jpeg" media="(min-width: 401px) and (max-width: 899px)">
