--- a/Lesson-10/preston.html
+++ b/Lesson-10/preston.html
@@ -56,30 +56,30 @@
             </div>
             <h2 class="forecast-heading">5 Day Forecast</h2>
             <div class="forecast">
-                    <div class="day1">
-                        <h3>Wed</h3> 
-                        <img id="icon1" src="#" alt="icon1" width="50">
-                        <p><span id="1"></span> °F</p>
-                    </div>  
-                    <div class="day2">
-                        <h3>Wed</h3> 
-                        <img id="icon2" src="#"  alt="icon2" width="50">
-                        <p><span id="2"></span> °F</p>
-                    </div>  
-                    <div class="day3">
-                        <h3>Wed</h3> 
-                        <img id="icon3" src="#"  alt="icon3" width="50">
-                        <p><span id="3"></span> °F</p>
-                    </div>  
-                    <div class="day4">
-                        <h3>Wed</h3> 
-                        <img id="icon4" src="#" alt="icon4" width="50">
-                        <p><span id="4"></span> °F</p>
-                    </div>      
-                    <div class="day5">
-                        <h3>Wed</h3> 
-                        <img id="icon5" src="#" alt="icon5" width="50">
-                        <p><span id="5"></span> °F</p>
+                <div class="day1">
+                    <h3><span id="dayName1"></span></h3>
+                    <img id="icon1" src="#" alt="icon1" width="50">
+                    <p><span id="1"></span> °F</p>
+                </div>  
+                <div class="day2">
+                    <h3><span id="dayName2"></span></h3>
+                    <img id="icon2" src="#"  alt="icon2" width="50">
+                    <p><span id="2"></span> °F</p>
+                </div>  
+                <div class="day3">
+                    <h3><span id="dayName3"></span></h3>
+                    <img id="icon3" src="#"  alt="icon3" width="50">
+                    <p><span id="3"></span> °F</p>
+                </div>  
+                <div class="day4">
+                    <h3><span id="dayName4"></span></h3>
+                    <img id="icon4" src="#" alt="icon4" width="50">
+                    <p><span id="4"></span> °F</p>
+                </div>      
+                <div class="day5">
+                    <h3><span id="dayName5"></span></h3>
+                    <img id="icon5" src="#" alt="icon5" width="50">
+                    <p><span id="5"></span> °F</p>
                     </div>                  
             </div>
             <div class="calendar">
