added fish haven javascript id

--- a/Lesson-06/weather/fishhaven.html
+++ b/Lesson-06/weather/fishhaven.html
@@ -13,7 +13,7 @@
         <link rel="stylesheet" href="../weather/css/medium.css" />
         <link rel="stylesheet" href="../weather/css/large.css" />
         <script defer src="../weather/js/script.js"></script>
-        <script defer src="../weather/js/windchill.js"></script>
+        <script defer src="../weather/js/weatherFH.js"></script>
 
 
     <body>
