--- a/Lesson-06/weather/preston.html
+++ b/Lesson-06/weather/preston.html
@@ -14,6 +14,7 @@
         <link rel="stylesheet" href="../weather/css/large.css" />
         <script defer src="../weather/js/script.js"></script>
         <script defer src="../weather/js/windchill.js"></script>
+        <script defer src="../weather/js/events.js"></script>
 
 
     <body>
@@ -96,7 +97,13 @@
                 <h3>Thursdays</h3>
                 <p>Story Time, 11 a.m., and 2 p.m., Larsen-Sant Library
                 <p>Adult Institute last class, 7 p.m., 2 Samuel 1-12/2 Samuel 13-24</p>
-                <p>BFF Club Meeting: 4 p.m., Larsen-Sant Library </p>          
+                <p>BFF Club Meeting: 4 p.m., Larsen-Sant Library </p>  
+                <section id="events">
+                    <h4>Preston Upcoming Events</h4>
+                    <p><span id="event1"></span></p>
+                    <p><span id="event2"></span></p>
+                    <p><span id="event3"></span></p>
+                </section>        
             </div>
             <div class="map-and-contact">
                 <img class="map" src="../weather/images/prestonmap.png" width="250" alt="map">
