added fish haven events

--- a/Lesson-06/weather/fishhaven.html
+++ b/Lesson-06/weather/fishhaven.html
@@ -14,8 +14,7 @@
         <link rel="stylesheet" href="../weather/css/large.css" />
         <script defer src="../weather/js/script.js"></script>
         <script defer src="../weather/js/weatherFH.js"></script>
-
-
+        <script defer src="../weather/js/eventsFH.js"></script>
     <body>
         <div id="prestonbanner"><p>Preston Pancakes in the Park! 9:00 a.m. Saturday at the city park pavilion</p></div>
         <header>
@@ -96,8 +95,14 @@
                 <h3>Thursdays</h3>
                 <p>Story Time, 11 a.m., and 2 p.m., Larsen-Sant Library
                 <p>Adult Institute last class, 7 p.m., 2 Samuel 1-12/2 Samuel 13-24</p>
-                <p>BFF Club Meeting: 4 p.m., Larsen-Sant Library </p>          
+                <p>BFF Club Meeting: 4 p.m., Larsen-Sant Library </p>    
+                <section id="events">
+                    <h4>Preston Upcoming Events</h4>
+                    <p><span id="event1"></span></p>
+                    <p><span id="event2"></span></p>
+                    <p><span id="event3"></span></p>      
             </div>
+            </section>    
             <div class="map-and-contact">
                 <img class="map" src="../weather/images/prestonmap.png" width="250" alt="map">
                 <section class="contact">
