updated data json source

--- a/Lesson-06/weather/fishhaven.html
+++ b/Lesson-06/weather/fishhaven.html
@@ -13,8 +13,8 @@
         <link rel="stylesheet" href="../weather/css/medium.css" />
         <link rel="stylesheet" href="../weather/css/large.css" />
         <script defer src="../weather/js/script.js"></script>
-        <script defer src="../weather/js/weatherFH.js"></script>
-        <script defer src="../weather/js/eventsFH.js"></script>
+        <script defer src="../weather/js/fishhaven.js"></script>
+
     <body>
         <div id="prestonbanner"><p>Preston Pancakes in the Park! 9:00 a.m. Saturday at the city park pavilion</p></div>
         <header>
@@ -100,9 +100,9 @@
                     <h4>Preston Upcoming Events</h4>
                     <p><span id="event1"></span></p>
                     <p><span id="event2"></span></p>
-                    <p><span id="event3"></span></p>      
+                    <p><span id="event3"></span></p>    
+                </section>     
             </div>
-            </section>    
             <div class="map-and-contact">
                 <img class="map" src="../weather/images/prestonmap.png" width="250" alt="map">
                 <section class="contact">
