--- a/Lesson-06/weather/preston.html
+++ b/Lesson-06/weather/preston.html
@@ -13,10 +13,7 @@
         <link rel="stylesheet" href="../weather/css/medium.css" />
         <link rel="stylesheet" href="../weather/css/large.css" />
         <script defer src="../weather/js/script.js"></script>
-        <script defer src="../weather/js/windchill.js"></script>
-        <script defer src="../weather/js/events.js"></script>
-
-
+        <script defer src="../weather/js/preston.js"></script>
     <body>
         <div id="prestonbanner"><p>Preston Pancakes in the Park! 9:00 a.m. Saturday at the city park pavilion</p></div>
         <header>
