updated hero images

--- a/Lesson-06/weather/fishhaven.html
+++ b/Lesson-06/weather/fishhaven.html
@@ -41,9 +41,9 @@
             <h2 class="cityname">Fish Haven, Idaho</h2>
             <div class="weather-summary-div">
                 <picture >
-                    <source srcset="../weather/images/hero600.jpeg" media="(min-width: 401px) and (max-width: 899px)">
-                        <source id="hero" srcset="../weather/images/hero900.jpeg" media="(min-width: 900px)">
-                    <img src="../weather/images/hero400.jpeg" alt="hero">
+                    <source srcset="../weather/images/fishhavenhero600.jpeg" media="(min-width: 401px) and (max-width: 899px)">
+                        <source id="hero" srcset="../weather/images/fishhavenhero900.jpeg" media="(min-width: 900px)">
+                    <img src="../weather/images/fishhavenhero400.jpeg" alt="hero">
                 </picture>
                 <section class="stats">
                     <h2 class="weathersummary">Weather Summary:</h2>
