--- a/Lesson-06/weather/sodasprings.html
+++ b/Lesson-06/weather/sodasprings.html
@@ -14,7 +14,7 @@
         <link rel="stylesheet" href="../weather/css/large.css" />
         <script defer src="../weather/js/script.js"></script>
         <script defer src="../weather/js/windchill.js"></script>
-        <script defer src="../weather/js/eventsSodaSprings.js"></script>
+        <script defer src="../weather/js/sodasprings.js"></script>
 
     <body>
         <div id="prestonbanner"><p>Preston Pancakes in the Park! 9:00 a.m. Saturday at the city park pavilion</p></div>
@@ -42,9 +42,9 @@
             <h2 class="cityname">Soda Springs, Idaho</h2>
             <div class="weather-summary-div">
                 <picture >
-                    <source srcset="../weather/images/hero600.jpeg" media="(min-width: 401px) and (max-width: 899px)">
-                        <source id="hero" srcset="../weather/images/hero900.jpeg" media="(min-width: 900px)">
-                    <img src="../weather/images/hero400.jpeg" alt="hero">
+                    <source srcset="../weather/images/sodaspringshero600.jpeg" media="(min-width: 401px) and (max-width: 899px)">
+                        <source id="hero" srcset="../weather/images/sodaspringshero900.jpeg" media="(min-width: 900px)">
+                    <img src="../weather/images/sodaspringshero400.jpeg" alt="hero">
                 </picture>
                 <section class="stats">
                     <h2 class="weathersummary">Weather Summary:</h2>
