--- a/Lesson-06/weather/homepage/index.html
+++ b/Lesson-06/weather/homepage/index.html
@@ -12,9 +12,8 @@
         <link rel="stylesheet" href="../css/small.css" />
         <link rel="stylesheet" href="../css/medium.css" />
         <link rel="stylesheet" href="../css/large.css" />
-        <script defer src="../weather/js/script.js"></script>
+        <script defer src="../js/script.js"></script>
         <script defer src="homepage.js"></script>
-
     </head>
     <body>
         <div id="prestonbanner"><p>Preston Pancakes in the Park! 9:00 a.m. Saturday at the city park pavilion</p></div>
@@ -32,8 +31,8 @@
                 <li><a href="#" onclick="toggleMenu()">Menu</a></li>
                 <li class="active"><a href="index.html">Home</a></li>
                 <li><a href="../preston.html">Preston Idaho</a></li>
-                <li><a href="#">Soda Springs</a></li>
-                <li><a href="#">Fish Haven</a></li>
+                <li><a href="../sodasprings.html">Soda Springs</a></li>
+                <li><a href="../fishhaven.html">Fish Haven</a></li>
                 <li><a href="../stormcenter.html">Storm Center</a></li>
                 <li ><a href="../gallery.html">Gallery</a></li>
             </ul>
