--- a/Lesson-06/weather/preston.html
+++ b/Lesson-06/weather/preston.html
@@ -12,8 +12,9 @@
         <link rel="stylesheet" href="../weather/css/small.css" />
         <link rel="stylesheet" href="../weather/css/medium.css" />
         <link rel="stylesheet" href="../weather/css/large.css" />
-        <script defer src="../weather/js/script.js"></script>
-        <script defer src="../weather/js/preston.js"></script>
+        <script defer src="js/script.js"></script>
+        <script defer src="js/preston.js"></script>
+    </head>
     <body>
         <div id="prestonbanner"><p>Preston Pancakes in the Park! 9:00 a.m. Saturday at the city park pavilion</p></div>
         <header>
